welcome vertace, bye-bye bace

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ version '1.0.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'maven'
 
+compileJava {
+    options.fork = true
+    options.incremental = true
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
