--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ repositories {
 }
 
 dependencies {
-    compile 'io.edgenode:edgenode:1.0-SNAPSHOT'
+    //compile 'io.hackable:hackable:1.0.0-SNAPSHOT'
+    //compile 'io.edgenode:edgenode:1.0.0-SNAPSHOT'
     compile 'io.vertx:vertx-web:3.3.3'
+
+    compile project(":hackable")
 }
