--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ repositories {
 }
 
 dependencies {
-    compile "io.hackable:hackable:1.0.0-SNAPSHOT"
     compile "io.vertx:vertx-web:$ver.vertx"
     compile "io.vertx:vertx-config:$ver.vertx"
     compile "io.vertx:vertx-config-yaml:$ver.vertx"
+    compile "io.hackable:hackable:2017.SNAPSHOT"
 
-    testCompile "org.codehaus.groovy:groovy-all:2.4.9"
+    testCompile "org.codehaus.groovy:groovy-all:2.4.10"
     testCompile "io.vertx:vertx-unit:$ver.vertx"
     testCompile "junit:junit:4.12"
 }
